# transparent-fd

./: fd_set_ip_transparent.c  fd_set_ip_transparent_client.c
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/adguard/filter/proxy/transparent/: TransparentSocketChannelTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: create_transparent_socket.c  native-lib.cpp  native-lib.h
app/src/main/cpp/iptables-1.6.0/: .CMakeLists.txt.kate-swp  CMakeLists.txt
app/src/main/cpp/iptables-1.6.0-android/: config.h.cmakein
app/src/main/cpp/iptables-1.6.0-android/iptables/: internal.h
app/src/main/cpp/iptables-1.6.0/libiptc/: libip4tc.c  libip6tc.c
app/src/main/java/com/adguard/filter/proxy/transparent/: App.java  MainActivity.java  TransparentUtils.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/adguard/filter/proxy/transparent/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
